[package]
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2021"
name = "mb2-embassy-rgb"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.7.0"
rtt-target = "0.4"

[dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]

[dependencies.microbit-bsp]
version = "0.3.1-pre"
git = "http://github.com/BartMassey-upstream/microbit-bsp"
branch = "omit-defmt"
default-features = false

[dependencies.embassy-futures]
version = "0.1.1"
default-features = false

[dependencies.embassy-sync]
version = "0.5.0"
default-features = false

[dependencies.embassy-time]
version = "0.3.0"
default-features = false

[dependencies.num-traits]
version = "0.2.18"
default-features = false
features = ["libm"]

[dependencies.embassy-executor]
version = "0.5.0"
features = ["integrated-timers", "arch-cortex-m", "executor-thread"]

[dependencies.cortex-m]
version = "0.7.0"
features = ["critical-section-single-core"]

[profile.release]
debug = 2
